--- a/hotdogClassifier/Base.lproj/Main.storyboard
+++ b/hotdogClassifier/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kec-Hx-UGh">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,14 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="hotdogClassifier" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g0L-zS-i1b">
-                                <rect key="frame" x="20" y="64" width="335" height="485"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="g0L-zS-i1b" secondAttribute="height" multiplier="67:97" id="PWd-MR-tob"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="88" width="414" height="734"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="10"/>
@@ -27,7 +24,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUr-su-oIW">
-                                <rect key="frame" x="20" y="575" width="335" height="72"/>
+                                <rect key="frame" x="0.0" y="842" width="414" height="0.0"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -43,11 +40,11 @@
                         <constraints>
                             <constraint firstItem="YUr-su-oIW" firstAttribute="trailing" secondItem="g0L-zS-i1b" secondAttribute="trailing" id="JyO-xw-p4q"/>
                             <constraint firstItem="YUr-su-oIW" firstAttribute="leading" secondItem="g0L-zS-i1b" secondAttribute="leading" id="O3I-tT-G0W"/>
-                            <constraint firstItem="YUr-su-oIW" firstAttribute="top" secondItem="g0L-zS-i1b" secondAttribute="bottom" constant="26" id="PFD-II-odK"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g0L-zS-i1b" secondAttribute="trailing" constant="20" id="VjZ-MD-C0S"/>
+                            <constraint firstItem="YUr-su-oIW" firstAttribute="top" secondItem="g0L-zS-i1b" secondAttribute="bottom" constant="20" id="PFD-II-odK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g0L-zS-i1b" secondAttribute="trailing" id="VjZ-MD-C0S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YUr-su-oIW" secondAttribute="bottom" constant="20" id="aCx-o6-wVH"/>
-                            <constraint firstItem="g0L-zS-i1b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="v2z-pJ-DMn"/>
-                            <constraint firstItem="g0L-zS-i1b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="yBd-Wh-KAY"/>
+                            <constraint firstItem="g0L-zS-i1b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="v2z-pJ-DMn"/>
+                            <constraint firstItem="g0L-zS-i1b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yBd-Wh-KAY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -70,11 +67,10 @@
         <!--Navigation Controller-->
         <scene sceneID="JQR-jq-tIw">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NAh-x7-a7N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kec-Hx-UGh" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kxq-DU-hPB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -82,6 +78,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="YvE-IR-g8k"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NAh-x7-a7N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
