--- a/hotdogClassifier/Base.lproj/Main.storyboard
+++ b/hotdogClassifier/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kec-Hx-UGh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kec-Hx-UGh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,24 +11,27 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="hotdogClassifier" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WhatFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g0L-zS-i1b">
-                                <rect key="frame" x="0.0" y="88" width="414" height="734"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="611"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUr-su-oIW">
-                                <rect key="frame" x="0.0" y="842" width="414" height="0.0"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Result will appear here!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUr-su-oIW">
+                                <rect key="frame" x="20" y="719" width="374" height="123"/>
+                                <color key="backgroundColor" red="0.45583150924245519" green="0.72705821700507611" blue="0.37980847746480934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="123" id="5P9-Ui-yg4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -36,20 +40,22 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.74882112093598774" green="0.98132258650000004" blue="0.73087178001215469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YUr-su-oIW" firstAttribute="trailing" secondItem="g0L-zS-i1b" secondAttribute="trailing" id="JyO-xw-p4q"/>
-                            <constraint firstItem="YUr-su-oIW" firstAttribute="leading" secondItem="g0L-zS-i1b" secondAttribute="leading" id="O3I-tT-G0W"/>
-                            <constraint firstItem="YUr-su-oIW" firstAttribute="top" secondItem="g0L-zS-i1b" secondAttribute="bottom" constant="20" id="PFD-II-odK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YUr-su-oIW" secondAttribute="bottom" constant="20" id="3Oq-mg-fpJ"/>
+                            <constraint firstItem="YUr-su-oIW" firstAttribute="top" secondItem="g0L-zS-i1b" secondAttribute="bottom" constant="20" id="A9G-Ba-2JP"/>
+                            <constraint firstItem="YUr-su-oIW" firstAttribute="leading" secondItem="g0L-zS-i1b" secondAttribute="leading" constant="20" id="O3I-tT-G0W"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g0L-zS-i1b" secondAttribute="trailing" id="VjZ-MD-C0S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YUr-su-oIW" secondAttribute="bottom" constant="20" id="aCx-o6-wVH"/>
-                            <constraint firstItem="g0L-zS-i1b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="v2z-pJ-DMn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YUr-su-oIW" secondAttribute="trailing" constant="20" id="cU6-W6-exb"/>
+                            <constraint firstItem="YUr-su-oIW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pfz-jk-h0K"/>
                             <constraint firstItem="g0L-zS-i1b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yBd-Wh-KAY"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="VjN-Ry-aic">
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="HVD-wd-3Ou">
+                            <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="cameraTapped:" destination="BYZ-38-t0r" id="8YK-km-TCx"/>
                             </connections>
@@ -62,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.2" y="115.59220389805098"/>
+            <point key="canvasLocation" x="1046.376811594203" y="115.17857142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JQR-jq-tIw">
